--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -245,11 +245,12 @@
   gap: 1.25rem;
   flex-wrap: wrap;
   @include adaptiveValue(padding-top, 20, 10);
-  @include adaptiveValue(padding-bottom, 50, 25);
+  @include adaptiveValue(padding-bottom, 50, 20);
   font-size: 0.875rem;
-  @media (max-width: 53.75rem) {
+  @media (max-width: 53.75em) {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    gap: 10px;
   }
 }
